[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Star.tscn" type="PackedScene" id=1]
[ext_resource path="res://GFX/HUD/star_slot.png" type="Texture" id=2]
[ext_resource path="res://GFX/HUD/star_plane.png" type="Texture" id=3]
[ext_resource path="res://Screens/StarScreen.gd" type="Script" id=4]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[node name="StarScreen" type="CanvasLayer"]
layer = 5
script = ExtResource( 4 )

[node name="ColorRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.431373 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -465.0
margin_top = -315.0
margin_right = 465.0
margin_bottom = 315.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarSlot" type="Sprite" parent="."]
position = Vector2( 845.385, 473.034 )
rotation = -0.523599
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="StarSlot2" type="Sprite" parent="."]
position = Vector2( 1120.08, 362.734 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="StarSlot3" type="Sprite" parent="."]
position = Vector2( 1406.1, 453.861 )
rotation = 0.523599
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Star1" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 848.745, 478.909 )
rotation = -0.523599
scale = Vector2( 0.9, 0.9 )

[node name="Star2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1119.9, 368.941 )
scale = Vector2( 0.9, 0.9 )

[node name="Star3" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1404.04, 459.515 )
rotation = 0.523599
scale = Vector2( 0.9, 0.9 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.675637
anchor_right = 0.5
anchor_bottom = 0.675637
margin_left = -455.0
margin_top = -112.5
margin_right = 455.0
margin_bottom = 112.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "Stars"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}
